--- a/readBusterHome.html
+++ b/readBusterHome.html
@@ -12,29 +12,18 @@
 </head>
 
 <body>
+<img hspace="25" src="logo.png" width="100" height="90"> 
+<button type="button" style= "align=right" onclick="location.href='login.html'">Login</button>
+<button type="button" style= "align=right" onclick="location.href='register.html'">Create an Account</button>
+<p>readBuster</p> <br> <br><br><br><br>
 
-<div class="tab"> readBuster 
-  <button style= "align=right" class="tablinks" onclick="location.href='login.html'">Login</button>
-</div>
 
-<br><br><br><br><br>
-
-<form class="example" action="BookView.php" style="margin:auto;max-width:300px">
+<form class="example" action="BookView.php" style="margin:auto;max-width:600px">
   <input type="text" placeholder="Search by Book Title or Author Name.." name="search2">
-  <button type="submit"><i class="fa fa-search"></i></button>
+  <button type="submit">Find a book</i></button>
 </form>
 
-<div class="footer">
-  <div id="footer-info">
-      <p>Copyright 2018 readBuster All rights reserved.</p>
-      <p><a href="#">Terms of Service</a> I <a href="#">Privacy</a></p>
-  </div>
-  <div id="footer-links">
-  				<a href="#">About Us</a>
-  				<a href="#">Meet The Team</a>						
-      <div class="clear"></div>
-  </div>
-</div>
+ 
 </body>
 </html>
 
