--- a/register.html
+++ b/register.html
@@ -9,10 +9,14 @@
    <script src = "https://web.njit.edu/~iap5/validate.js" type ="text/javascript"> </script>
 	</head>
 	<body>
-		<form action="request_login.php" name="RegistrationForm" onsubmit="return myFunction()" method="POST" enctype="multipart/form-data">
+		<form action="request_register.php" name="RegistrationForm" onsubmit="return myFunction()" method="POST" enctype="multipart/form-data">
 		<div id="container1"> 
 			<h1 style="text-align: center;">Sign Up</h1>
 		  	<center>
+			    <label for="username"> Username</label><br>
+			    <input id="username" name="username" type="text"> 
+			    <br><br>
+
 			    <label for="firstname"> First Name</label><br>
 			    <input id="firstname" name="firstname" type="text">
 			    <br><br>
@@ -20,11 +24,11 @@
 			    <label for="lastname"> Last Name</label><br>
 			    <input id="lastname" name="lastname" type="text">
 			    <br><br>
-
-			    <label for="username"> Username</label><br>
-			    <input id="username" name="username" type="text"> 
+				
+			    <label for="email"> Email</label><br>
+			    <input id="email" name="email" type="text">
 			    <br><br>
-
+			    
 			    <label for="password"> Password</label><br>
 			    <input id="password" name="password" type="password">
 			    <br><br>
@@ -33,9 +37,7 @@
 			    <input id="confirmpassword" name="confirmpassword" type="password">
 			    <br><br>
 
-			    <label for="email"> Email</label><br>
-			    <input id="email" name="email" type="text">
-			    <br><br>
+		
 
 			    <input type="submit" value= "Register">
 			    <br><br><br>
